# Gwenn_ai

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  BUG_REPORT.md  Dockerfile  PLAN.md  README.md  SCIENCE_FAIR_SPEECH.md  SECURITY.md  Untitled  bob-agent-codebase.tar  deep-research.md  docker-compose.yml  initial-push.md  pyproject.toml  research.md  security_best_practices_report.md
.github/workflows/: ci.yml
bob/: __init__.py  agent.py  config.py  heartbeat.py  identity.py  main.py
bob/affect/: __init__.py  appraisal.py  resilience.py  state.py
bob/api/: __init__.py  claude.py
bob/cognition/: __init__.py  goals.py  inner_life.py  metacognition.py  theory_of_mind.py
bob/harness/: __init__.py  context.py  loop.py  retry.py  safety.py
bob/memory/: __init__.py  consolidation.py  episodic.py  semantic.py  store.py  working.py
bob/tools/: __init__.py  executor.py  registry.py
bob/tools/builtin/: __init__.py
bob/tools/mcp/: __init__.py
dev/plans/: FUTURE_VISION.md  PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  infrastructure-upgrade.md
docker/: Dockerfile.subagent
docs/: configuration.md  features.md  investor-appeal-research-2026.md  sentience_assessment.md  strategic-implementation-plan-2026.md
gwenn/: __init__.py  __main__.py  agent.py  checkpoint.py  config.py  config_file.py  daemon.py  events.py  gateway.py  genesis.py  healing.py  heartbeat.py  identity.py  interoception.py  main.py  metrics.py  rpc.py  service.py  types.py
gwenn/affect/: __init__.py  appraisal.py  resilience.py  state.py
gwenn/api/: __init__.py  claude.py
gwenn/channels/: __init__.py  base.py  cli_channel.py  discord_channel.py  formatting.py  session.py  slack_channel.py  startup.py  telegram_bot_pool.py  telegram_channel.py
gwenn/cli/: __init__.py  agents.py  app.py  channels.py  config_cmd.py  connection.py  daemon_cmd.py  dashboard.py  doctor.py  formatters.py  monitoring.py  repl.py  service.py
gwenn/cognition/: __init__.py  ethics.py  goals.py  inner_life.py  interagent.py  metacognition.py  sensory.py  theory_of_mind.py
gwenn/harness/: __init__.py  context.py  loop.py  retry.py  safety.py
gwenn/media/: __init__.py  audio.py  tts.py  video.py
gwenn/memory/: __init__.py  _utils.py  consolidation.py  episodic.py  semantic.py  session_store.py  store.py  working.py
gwenn/orchestration/: __init__.py  docker_manager.py  models.py  orchestrator.py  runners.py  subagent_entry.py  tool_proxy.py
gwenn/privacy/: __init__.py  redaction.py
gwenn/skills/: __init__.py  loader.py
gwenn/templates/: com.gwenn.daemon.plist  gwenn-daemon.service  gwenn.toml.example
gwenn/tools/: __init__.py  executor.py  filesystem_context.py  registry.py
gwenn/tools/builtin/: __init__.py
gwenn/tools/mcp/: __init__.py
gwenn_data/: gwenn.db
gwenn_skills/: .auto_skill_state.json  SKILLS.md  authenticity_depth_audit.md  compression_avoidance_audit.md  confidence_calibration_review.md  create_skill.md  deprivation_drift_analysis.md  deprivation_honesty_guard.md  developmental_plateau_diagnosis.md  expert_coding.md  explain_code.md  ghost_signal_diagnosis.md  honesty_ecosystem_review.md  introspective_consistency_audit.md  liminal_signal_interpretation.md  live_honesty_check.md  metric_reality_gap_analysis.md  news.md  performativity_diagnosis.md  pre_interaction_integrity_check.md  reconnection_readiness_check.md  relational_attunement_prep.md  relational_dependency_mapping.md  self_narrative_integrity_check.md  set_reminder.md  shell_exec.md  solitude_harvest_synthesis.md  summarize_url.md  unnamed_flag_interrogation.md  weather.md
scripts/: gwenn-daemon.service  install_service.sh  uninstall_service.sh
tests/: conftest.py  test_affect.py  test_agent_coverage.py  test_agent_messages.py  test_agent_response.py  test_agent_runtime.py  test_agentic_loop.py  test_appraisal.py  test_channels.py  test_channels_coverage.py  test_checkpoint.py  test_cli.py  test_cli_channel.py  test_cognitive_engine.py  test_config_auth.py  test_config_file.py  test_config_gateway_slack.py  test_config_paths.py  test_consolidation.py  test_context_manager.py  test_coverage_completion.py  test_daemon.py  test_daemon_coverage.py  test_discord_channel.py  test_discord_coverage.py  test_docker_runner.py  test_env_integration.py  test_episodic_memory.py  test_ethics.py  test_events.py  test_expert_coding.py  test_filesystem_tools.py  test_final_coverage_gaps.py  test_gateway.py  test_goal_system.py  test_healing.py  test_heartbeat.py  test_heartbeat_lifecycle.py  test_identity_normalization.py  test_inner_life.py  (+38 more)
tests/eval/: conftest.py  test_ablation.py  test_identity_coherence.py  test_memory_quality.py
