[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwenn-agent"
dynamic = ["version"]
description = "Gwenn - Genesis Woven from Evolved Neural Networks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [
    { name = "Justin McKibben" },
    { name = "Jayden McKibben" },
]

dependencies = [
    "anthropic>=0.40.0",           # Claude API SDK
    "numpy>=1.26.0",               # Numerical operations for embeddings
    "chromadb>=0.4.22",            # Vector database for semantic memory
    "aiosqlite>=0.19.0",           # Async SQLite for episodic persistence
    "pydantic>=2.5.0",             # Data validation for all state objects
    "pydantic-settings>=2.1.0",    # Environment-based configuration
    "python-dotenv>=1.0.0",        # .env file loading
    "httpx>=0.27.0",               # Async HTTP for MCP and tool calls
    "structlog>=23.2.0",           # Structured logging for observability
    "rich>=13.7.0",                # Terminal UI for heartbeat display
    "python-telegram-bot[rate-limiter]>=22.0",  # Telegram channel support (default)
]

[project.optional-dependencies]
telegram = ["python-telegram-bot[rate-limiter]>=22.0"]
discord = ["discord.py>=2.3.0"]
channels = ["python-telegram-bot[rate-limiter]>=22.0", "discord.py>=2.3.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
gwenn = "gwenn.main:main"
gwenn-daemon = "gwenn.daemon:run_daemon"

[tool.setuptools.packages.find]
where = ["."]
include = ["gwenn", "gwenn.*"]

[tool.setuptools.dynamic]
version = {attr = "gwenn.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"
